# LTHTN_N17

./: README.md
FIRMWARE/: README.md  sdkconfig  sdkconfig.old
FIRMWARE/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
FIRMWARE/main/camera/: app_camera.c  app_camera.h
FIRMWARE/main/web/: app_httpd.c  app_mdns.c  app_mdns.h  app_wifi.c  app_wifi.h
FIRMWARE/main/web/www/: index.html  index.html.gz_
SOFTWARE/: 4thmodel.ipynb  detect_in_video.ipynb
